--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,20 +4,23 @@
 
 {% block body %}
 <form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <p>Username: admin<br>
         Password: password
     </p>
+    <br>
+    <br>
+
+    {% if error %}
+        <div class="alert alert-danger">## {{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
+    {% if app.user %}
+        <div class="mb-3">
+            ## You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% endif %}
+
     <br>
     <br>
 
