Added debug bundle

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -25,12 +25,12 @@
     <br>
 
     <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
+    <input type="text" value="{{ last_username|default('admin') }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
 
     <br>
     <br>
     <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <input type="password" value="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
